# python-package-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/python_package_template/: __init__.py  __main__.py
