[project]
name = "python-package-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ryohidaka", email = "39184410+ryohidaka@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"python-package-template" = "python_package_template:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.4",
    "pytest>=8.2.0",
    "pre-commit>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_package_template"]
